--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
                    Leslie Noye is experienced marketing and product professional at the intersection of business, technology, and people, with a proven track record of driving impactful solutions that fuel business growth. Devoted to customer-centric problem-solving with a strong emphasis on empathy. 
                     I am a team-oriented individual known for fostering cross-functional relationships to achieve collective goals.
                     <center> </p>
+
+                <img src="https://www.ischool.berkeley.edu/sites/default/files/styles/fullscreen/public/profile_pictures/img_9104_2.jpg?itok=QnfR259k" alt="Leslie" width="563" height="830">
                     
 
                 
